prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    # Ingress Core Setting
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # SSL Settings
    #cert-manager.io/issuer: abcbit-issuer
    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:010068699561:certificate/5bae4756-700d-4412-b921-b72939d2edb5
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    #alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    #alb.ingress.kubernetes.io/ssl-redirect: '443'
      #alb.ingress.kubernetes.io/security-groups: abc-alb-sg
    alb.ingress.kubernetes.io/group.name: "ingress-group"
    #alb.ingress.kubernetes.io/group.order: "2"
spec:
  ingressClassName: alb
  rules:
    - host: grafana.mwater.shop
      http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: grafana-service  # service와 name 동일하게 !!
               port:
                 number: 3000
    - host: prometheus.mwater.shop
      http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: prometheus-service  # service와 name 동일하게 !!
               port:
                 number: 8080
